Attempt to compile the paper.

--- a/paper.bib
+++ b/paper.bib
@@ -1,10 +1,11 @@
-@article{neurolibre:2021,
-  title={Neurolibre: A preprint server for interactive data analyses},
-  author={Karakuzu, Agah and DuPre, Elizabeth and Tetrel, Loic and Boudreau, Mathieu and Poline, Jean-Baptiste and Stikov, Nikola and Bellec, Pierre},
-  journal={NeuroLibre},
-  volume={1},
-  number={1},
-  pages={1--2},
-  year={2021},
-  publisher={CONP}
+@ARTICLE{Craddock2018-ou,
+  title    = "Neuroimage special issue on brain segmentation and parcellation -
+              Editorial",
+  author   = "Craddock, R Cameron and Bellec, Pierre and Jbabdi, Saad",
+  journal  = "Neuroimage",
+  volume   =  170,
+  pages    = "1--4",
+  month    =  apr,
+  year     =  2018,
+  language = "en"
 }
