--- a/paper.bib
+++ b/paper.bib
@@ -7,5 +7,7 @@
   pages    = "1--4",
   month    =  apr,
   year     =  2018,
+  doi      = {10.1016/j.neuroimage.2017.11.063},
+  url      = {https://doi.org/10.1016/j.neuroimage.2017.11.063},
   language = "en"
 }
