Fix typo, add bibliography to the book

--- a/paper.bib
+++ b/paper.bib
@@ -11,3 +11,16 @@
   url      = {https://doi.org/10.1016/j.neuroimage.2017.11.063},
   language = "en"
 }
+
+@Inbook{Kramer2016,
+author="Kramer, Oliver",
+title="Scikit-Learn",
+bookTitle="Machine Learning for Evolution Strategies",
+year="2016",
+publisher="Springer International Publishing",
+address="Cham",
+pages="45--53",
+abstract="scikit-learn is an open source machine learning library written in Python.",
+isbn="978-3-319-33383-0",
+doi={10.1007/978-3-319-33383-0_5}
+}
