--- a/content/intro.ipynb
+++ b/content/intro.ipynb
@@ -38,8 +38,7 @@
     "\n",
     "# Introduction\n",
     "\n",
-    "Back in 2017, we were invited as guest editors for the journal \"neuroimage\", and organized a special issue on the topic of **brain parcellation and segmentation**. After months of receiving submissions and going through the stages of peer review for all articles, there were 38 papers accepted for publication. We were left with the difficult task of writing a short editorial summarizing concisely this fairly large snapshot of a vibrant area of neuroimaging research. Quickly we realized that we needed to group the papers into more specific categories than the general umbrella of parcellation and segmentation.\n",
-    "\n",
+    "Back in 2017, we were invited as guest editors for the journal \"neuroimage\", and organized a special issue on the topic of **brain parcellation and segmentation** {cite:p}`Craddock2018-ou`. After months of receiving submissions and going through the stages of peer review for all articles, there were 38 papers accepted for publication. We were left with the difficult task of writing a short editorial summarizing concisely this fairly large snapshot of a vibrant area of neuroimaging research. Quickly we realized that we needed to group the papers into more specific categories than the general umbrella of parcellation and segmentation.\n",
     "\n",
     "Parcellation, segmentation (or clustering and community detection) are just different names for generic techniques aimed at finding broad categories in the data, while abstracting away less relevant finer-grained information. So when facing the problem of drawing categories of papers for the editorial, it was only natural to apply a parcellation analysis. In other words, we decided to **parcellate the parcellation (special) issue**. This jupyter book will allow interested readers to reproduce the short analysis that went into building the categories. You can read the final editorial [here](https://doi.org/10.1016/j.neuroimage.2017.11.063) (sadly behind a paywall).\n",
     "\n",
@@ -58,9 +57,21 @@
    "cell_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
