Add references command

--- a/content/papers.ipynb
+++ b/content/papers.ipynb
@@ -346,6 +346,16 @@
     "            color_discrete_sequence=px.colors.sequential.Plasma_r)\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "186fcc8d",
+   "metadata": {},
+   "source": [
+    "```{bibliography}\n",
+    ":filter: docname in docnames\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
